--- a/app/views/spaces/_calendar_mini.html.erb
+++ b/app/views/spaces/_calendar_mini.html.erb
@@ -28,18 +28,18 @@
       <div class="calendar-body">
         <% calendar.date_range.each do |day| %>
           <div class="<%= calendar.date_class_string(day) %>">
-            <% if calendar.date_has_reservation?(day, reservations: space.reservations) %>
+            <% if calendar.date_has_reservation?(day, space.reservations) %>
               <button data-html="true"
                       data-href="https://randomuser.me/api/?results=10"
-                      data-modal="<%= calendar.choose_reservations_html(space, day, reservations: space.reservations) %>"
-                      data-target="<%= calendar.choose_modal_form(day, reservations: space.reservations) %>"
-                      data-tooltip="<%= calendar.date_item_tooltip_data(day, reservations: space.reservations) %>"
-                      class="date-item <%= calendar.date_item_class_string(day, reservations: space.reservations) %>">
+                      data-modal="<%= calendar.choose_reservations_html(space, day, space.reservations) %>"
+                      data-target="<%= calendar.choose_modal_form(day, space.reservations) %>"
+                      data-tooltip="<%= calendar.date_item_tooltip_data(day, space.reservations) %>"
+                      class="date-item <%= calendar.date_item_class_string(day, space.reservations) %>">
                 <%= day.mday %>
               </button>
             <% elsif tenant.is_demo? && calendar.date_in_month_of_interest?(day) %>
-              <%= link_to day.mday, 
-                          new_tenant_space_reservation_path(tenant_id: tenant.id, space_id: space.id, date: calendar.display_date(day)), 
+              <%= link_to day.mday,
+                          new_tenant_space_reservation_path(tenant_id: tenant.id, space_id: space.id, date: calendar.display_date(day)),
                           class: "date-item button is-light" %>
             <% else %>
               <%= day.mday %>
