--- a/app/views/spaces/new.html.erb
+++ b/app/views/spaces/new.html.erb
@@ -3,7 +3,7 @@
 <% if space.errors.any? %>
   <div id="error_explanation">
     <h2 style='color: #e84118'><%= pluralize(space.errors.count, "error") %>
-      prohibited this initiative_form from being saved:
+      prohibited this space from being saved:
     </h2>
     <ul>
     <% space.errors.full_messages.each do |message| %>
