--- a/app/assets/stylesheets/calendar.scss
+++ b/app/assets/stylesheets/calendar.scss
@@ -235,7 +235,7 @@
   text-decoration: none;
 }
 
-.calendar .calendar-date.is-disabled .date-item, .calendar .calendar-date.is-disabled .calendar-event {
+.calendar .calendar-date.is-disabled .date-item, .calendar-event {
   cursor: default;
   opacity: .25;
   pointer-events: none;
@@ -270,6 +270,7 @@
   color: #4b4b4b;
 }
 
+// the large calendar settings
 .calendar.is-calendar-large .calendar-body {
   padding: 0;
 }
