--- a/app/views/reservations/_form.html.erb
+++ b/app/views/reservations/_form.html.erb
@@ -12,24 +12,24 @@
 
   <div class="card">
     <div class="card-content">
+
       <div class="field is-horizontal">
-        <div class="field-label is-normal">Event</div>
+        <div class="field-label is-normal">
+          Event <small><i>(choose: new or existing)</i></small>
+        </div>
         <div class="field-body">
           <div class="field has-addons is-grouped is-grouped-multiline">
             <div class="control">
-              <%= form.collection_select :event_id,
-                        tenant.events, :id, :event_name, {include_blank: 'Select Event'},
+              <%= form.collection_select :event_id, tenant.events,
+                        :id, :event_name, {include_blank: 'Select Event'},
                         {class: 'select is-rounded is-danger'} %>
-              <p class="help is-danger">Event is Required</p>
-              <%# error_message_on(form.object, :event_id) %>
+              <p class="help">Choose Existing</p>
+              <%= error_message_on(form.object, :event_id) %>
             </div>
-            <div class="control is-expanded has-icons-left">
-              <%= form.text_field :host, placeholder: "Host (Optional)", class: "input" %>
-              <span class="icon is-small is-left">
-                <i class="fas fa-user"></i>
-              </span>
-              <p class="help">Host is optional</p>
-              <%# error_message_on(form.object, :host) %>
+            <div class="control">
+              <%# button_to "Submit", { action: "create" }, remote: true, class: "button" %>
+              <button class="button is-small">or New</button>
+              <p class="help">Create New</p>
             </div>
           </div>
         </div>
@@ -38,13 +38,20 @@
       <div class="field is-horizontal">
         <div class="field-label is-normal">Space</div>
         <div class="field-body">
-          <div class="field">
+          <div class="field has-addons is-grouped is-grouped-multiline">
             <div class="control">
-              <%= form.collection_select :space_id,
-                        tenant.spaces, :id, :space_name, {},
-                        {class: 'select space'} %>
-              <p class="help is-danger">Room/Space is required</p>
+              <%= form.collection_select :space_id, tenant.spaces,
+                        :id, :space_name, {}, {class: 'select space'} %>
+              <p class="help">Required</p>
               <%= error_message_on(form.object, :space_id) %>
+            </div>
+            <div class="control has-icons-left">
+              <%= form.text_field :host, placeholder: "Host (Optional)", class: "input" %>
+              <span class="icon is-small is-left">
+                <i class="fas fa-user"></i>
+              </span>
+              <p class="help">Optional</p>
+              <%= error_message_on(form.object, :host) %>
             </div>
           </div>
         </div>
@@ -56,14 +63,14 @@
           <div class="field has-addons is-grouped is-grouped-multiline">
             <div class="control">
               <%= form.date_field :start_date, class: "input" %>
-              <p class="help is-danger">Start-Date is required</p>
+              <p class="help">Required</p>
               <%= error_message_on(form.object, :date) %>
             </div>
             <div class="control is-expanded">
-              <%= form.collection_select :start_time_slot_id,
-                        space.allowed_time_slots, :id, :time_slot_name, {include_blank: 'Please Select'},
+              <%= form.collection_select :start_time_slot_id, space.allowed_time_slots,
+                        :id, :time_slot_name, {include_blank: 'Please Select'},
                         {class: 'select'} %>
-              <p class="help is-danger">Timeslot is required</p>
+              <p class="help">Required</p>
               <%= error_message_on(form.object, :space_id) %>
             </div>
           </div>
@@ -71,12 +78,14 @@
       </div>
 
       <div class="field is-horizontal">
-        <div class="field-label is-normal">End Info (Optional)</div>
+        <div class="field-label is-normal">
+          End Info <small><i>(when empty assumes same as start info)</i></small>
+        </div>
         <div class="field-body">
           <div class="field has-addons is-grouped is-grouped-multiline">
             <div class="control">
               <%= form.date_field :end_date, class: "input" %>
-              <p class="help">When empty same as start</p>
+              <p class="help">Optional</p>
               <%= error_message_on(form.object, :date) %>
             </div>
 
@@ -84,7 +93,7 @@
               <%= form.collection_select :end_time_slot_id,
                         space.allowed_time_slots, :id, :time_slot_name, {include_blank: 'Please Select'},
                         {class: 'select'} %>
-              <p class="help">Timeslot (optional)</p>
+              <p class="help">Optional</p>
               <%= error_message_on(form.object, :space_id) %>
             </div>
           </div>
