--- a/app/views/reservations/_form.html.erb
+++ b/app/views/reservations/_form.html.erb
@@ -1,120 +1,146 @@
-  <% if reservation.errors.any? %>
-    <div id="error_explanation">
-      <h2><%= pluralize(reservation.errors.count, "error") %> prohibited this reservation from being saved:</h2>
+<% if reservation.errors.any? %>
+  <div id="error_explanation">
+    <h2><%= pluralize(reservation.errors.count, "error") %> prohibited this reservation from being saved:</h2>
 
-      <ul>
-        <% reservation.errors.full_messages.each do |message| %>
-          <li><%= message %></li>
-        <% end %>
-      </ul>
-    </div>
-  <% end %>
-
-  <div class="card">
-    <div class="card-content">
-
-      <div class="field is-horizontal">
-        <div class="field-label is-normal">
-          Event <small><i>(choose: new or existing)</i></small>
-        </div>
-        <div class="field-body">
-          <div class="field has-addons is-grouped is-grouped-multiline">
-            <div class="control">
-              <%= form.collection_select :event_id, tenant.events,
-                        :id, :event_name, {include_blank: 'Select Event'},
-                        {class: 'select is-rounded is-danger'} %>
-              <p class="help">Choose Existing</p>
-              <%= error_message_on(form.object, :event_id) %>
-            </div>
-            <div class="control">
-              <%# button_to "Submit", { action: "create" }, remote: true, class: "button" %>
-              <button class="button is-small">or New</button>
-              <p class="help">Create New</p>
-            </div>
-          </div>
-        </div>
-      </div>
-
-      <div class="field is-horizontal">
-        <div class="field-label is-normal">Space</div>
-        <div class="field-body">
-          <div class="field has-addons is-grouped is-grouped-multiline">
-            <div class="control">
-              <%= form.collection_select :space_id, tenant.spaces,
-                        :id, :space_name, {}, {class: 'select space'} %>
-              <p class="help">Required</p>
-              <%= error_message_on(form.object, :space_id) %>
-            </div>
-            <div class="control has-icons-left">
-              <%= form.text_field :host, placeholder: "Host (Optional)", class: "input" %>
-              <span class="icon is-small is-left">
-                <i class="fas fa-user"></i>
-              </span>
-              <p class="help">Optional</p>
-              <%= error_message_on(form.object, :host) %>
-            </div>
-          </div>
-        </div>
-      </div>
-
-      <div class="field is-horizontal">
-        <div class="field-label is-normal">Start Info</div>
-        <div class="field-body">
-          <div class="field has-addons is-grouped is-grouped-multiline">
-            <div class="control">
-              <%= form.date_field :start_date, class: "input" %>
-              <p class="help">Required</p>
-              <%= error_message_on(form.object, :date) %>
-            </div>
-            <div class="control is-expanded">
-              <%= form.collection_select :start_time_slot_id, space.allowed_time_slots,
-                        :id, :time_slot_name, {include_blank: 'Please Select'},
-                        {class: 'select'} %>
-              <p class="help">Required</p>
-              <%= error_message_on(form.object, :space_id) %>
-            </div>
-          </div>
-        </div>
-      </div>
-
-      <div class="field is-horizontal">
-        <div class="field-label is-normal">
-          End Info <small><i>(when empty assumes same as start info)</i></small>
-        </div>
-        <div class="field-body">
-          <div class="field has-addons is-grouped is-grouped-multiline">
-            <div class="control">
-              <%= form.date_field :end_date, class: "input" %>
-              <p class="help">Optional</p>
-              <%= error_message_on(form.object, :date) %>
-            </div>
-
-            <div class="control is-expanded">
-              <%= form.collection_select :end_time_slot_id,
-                        space.allowed_time_slots, :id, :time_slot_name, {include_blank: 'Please Select'},
-                        {class: 'select'} %>
-              <p class="help">Optional</p>
-              <%= error_message_on(form.object, :space_id) %>
-            </div>
-          </div>
-        </div>
-      </div>
-
-      <div class="field is-horizontal">
-        <div class="field-label is-normal"></div>
-        <div class="field-body">
-          <div class="field is-grouped is-grouped-multiline">
-            <div class="control">
-              <%= form.submit("Save", class: "button is-link is-info is-outlined is-light") %>
-            </div>
-            <div class="control">
-              <%= link_to 'Back', tenant_path(tenant), class: 'button is-link is-danger is-outlined' %>
-            </div>
-          </div>
-          <%# form.button("Save", class: "button") %>
-          <%# button_to "Submit", { action: "create" }, remote: true, class: "button" %>
-        </div>
-      </div>
-
-    </div>
+    <ul>
+      <% reservation.errors.full_messages.each do |message| %>
+        <li><%= message %></li>
+      <% end %>
+    </ul>
   </div>
+<% end %>
+
+<div class="card">
+  <div class="card-content">
+
+    <div class="field is-horizontal">
+      <div class="field-label is-normal">
+        Event <small><i>(choose: new or existing)</i></small>
+      </div>
+      <div class="field-body">
+        <div class="field has-addons is-grouped is-grouped-multiline">
+          <div class="control">
+            <%= form.collection_select :event_id, tenant.events,
+                      :id, :event_name, {include_blank: 'Select Event'},
+                      {class: 'select is-rounded is-danger'} %>
+            <p class="help">Choose Existing</p>
+            <%= error_message_on(form.object, :event_id) %>
+          </div>
+          <div class="control">
+            <%# button_to "Submit", { action: "create" }, remote: true, class: "button" %>
+            <button data-html="true"
+                      data-modal="event-new-modal"
+                      data-target="Form for new event"
+                      class="button is-small">
+                or New
+              </button>
+            <p class="help">Create New</p>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <div class="field is-horizontal">
+      <div class="field-label is-normal">Space</div>
+      <div class="field-body">
+        <div class="field has-addons is-grouped is-grouped-multiline">
+          <div class="control">
+            <%= form.collection_select :space_id, tenant.spaces,
+                      :id, :space_name, {}, {class: 'select space'} %>
+            <p class="help">Required</p>
+            <%= error_message_on(form.object, :space_id) %>
+          </div>
+          <div class="control has-icons-left">
+            <%= form.text_field :host, placeholder: "Host (Optional)", class: "input" %>
+            <span class="icon is-small is-left">
+              <i class="fas fa-user"></i>
+            </span>
+            <p class="help">Optional</p>
+            <%= error_message_on(form.object, :host) %>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <div class="field is-horizontal">
+      <div class="field-label is-normal">Start Info</div>
+      <div class="field-body">
+        <div class="field has-addons is-grouped is-grouped-multiline">
+          <div class="control">
+            <%= form.date_field :start_date, class: "input" %>
+            <p class="help">Required</p>
+            <%= error_message_on(form.object, :date) %>
+          </div>
+          <div class="control is-expanded">
+            <%= form.collection_select :start_time_slot_id, space.allowed_time_slots,
+                      :id, :time_slot_name, {include_blank: 'Please Select'},
+                      {class: 'select'} %>
+            <p class="help">Required</p>
+            <%= error_message_on(form.object, :space_id) %>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <div class="field is-horizontal">
+      <div class="field-label is-normal">
+        End Info <small><i>(when empty assumes same as start info)</i></small>
+      </div>
+      <div class="field-body">
+        <div class="field has-addons is-grouped is-grouped-multiline">
+          <div class="control">
+            <%= form.date_field :end_date, class: "input" %>
+            <p class="help">Optional</p>
+            <%= error_message_on(form.object, :date) %>
+          </div>
+
+          <div class="control is-expanded">
+            <%= form.collection_select :end_time_slot_id,
+                      space.allowed_time_slots, :id, :time_slot_name, {include_blank: 'Please Select'},
+                      {class: 'select'} %>
+            <p class="help">Optional</p>
+            <%= error_message_on(form.object, :space_id) %>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <div class="field is-horizontal">
+      <div class="field-label is-normal"></div>
+      <div class="field-body">
+        <div class="field is-grouped is-grouped-multiline">
+          <div class="control">
+            <%= form.submit("Save", class: "button is-link is-info is-outlined is-light") %>
+          </div>
+          <div class="control">
+            <%= link_to 'Back', tenant_path(tenant), class: 'button is-link is-danger is-outlined' %>
+          </div>
+        </div>
+        <%# form.button("Save", class: "button") %>
+        <%# button_to "Submit", { action: "create" }, remote: true, class: "button" %>
+      </div>
+    </div>
+
+  </div>
+</div>
+
+
+<div id="event-new-modal" class="modal">
+  <div class="modal-background"></div>
+  <div class="modal-card">
+    <header class="modal-card-head">
+      <p class="modal-card-title">New Event</p>
+      <button class="delete" aria-label="close"></button>
+    </header>
+    <section id="reservation-details-body" class="modal-card-body">
+      New event form
+    </section>
+    <footer class="modal-card-foot">
+      <%# only show when edit permissions (or demogroup for testing) %>
+      <% if tenant.is_demo?  %>
+        <button class="button is-success">Edit</button>
+      <% end %>
+      <button class="button">Dismiss</button>
+    </footer>
+  </div>
+</div>
