--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <!--
+    <!-- fix turbolinks with back button
       Modal JS solution when 'back' button needs JS reload
       https://github.com/turbolinks/turbolinks#ensuring-specific-pages-trigger-a-full-reload
       https://stackoverflow.com/questions/39627881/jquery-plugin-initialization-on-browser-back-button-for-turbolinks-rails-5/39801052
