--- a/app/views/spaces/_calendar_mini.html.erb
+++ b/app/views/spaces/_calendar_mini.html.erb
@@ -89,3 +89,72 @@
     </footer>
   </div>
 </div>
+
+<%
+=begin%>
+ <script>
+'use strict';
+
+// https://siongui.github.io/2018/09/27/vuejs-bulma-modal/
+// https://siongui.github.io/2018/02/11/bulma-modal-with-javascript/
+
+document.addEventListener('DOMContentLoaded', function () {
+
+  // Modals
+  var rootEl = document.documentElement;
+  var $modals = getAll('.modal');
+  var $modalButtons = getAll('.modal-button');
+  var $modalCloses = getAll('.modal-background, .modal-close, .modal-card-head .delete, .modal-card-foot .button');
+
+  if ($modalButtons.length > 0) {
+    $modalButtons.forEach(function ($el) {
+      $el.addEventListener('click', function () {
+
+        // identify element that was clicked
+        var target = $el.dataset.target;
+        var $target = document.getElementById(target);
+
+        // get the html with the reservations info
+        var dataHtml = this.getAttribute("data-modal");
+        // inject html from the date-modal attribute
+        document.getElementById(`${target}-body`).innerHTML = dataHtml
+
+        // 'is-active' - activates / open the modal
+        // 'is-clipped' allows the modal to scroll instead of background
+        rootEl.classList.add('is-clipped');
+        $target.classList.add('is-active');
+      });
+    });
+  }
+
+  if ($modalCloses.length > 0) {
+    $modalCloses.forEach(function ($el) {
+      $el.addEventListener('click', function () {
+        closeModals();
+      });
+    });
+  }
+
+  document.addEventListener('keydown', function (event) {
+    var e = event || window.event;
+    if (e.keyCode === 27) {
+      closeModals();
+    }
+  });
+
+  function closeModals() {
+    rootEl.classList.remove('is-clipped');
+    $modals.forEach(function ($el) {
+      $el.classList.remove('is-active');
+    });
+  }
+
+  // Functions
+  function getAll(selector) {
+    return Array.prototype.slice.call(document.querySelectorAll(selector), 0);
+  }
+
+});
+</script> 
+<%
+=end%>
