--- a/app/views/spaces/show.html.erb
+++ b/app/views/spaces/show.html.erb
@@ -1,6 +1,6 @@
 <h1 class="title"><small>Space:</small> <%= space.space_name %></h1>
 
-<%= render 'calendar_maxi', space: space %>
+<%= render 'spaces/calendar_maxi', space: space %>
 
 
 <%# link_to 'Edit', edit_space_path(id: space) %> |
