--- a/app/views/spaces/index.html.erb
+++ b/app/views/spaces/index.html.erb
@@ -20,7 +20,7 @@
                     tenant_space_path(id: space.id, tenant_id: tenant.id),
                     class: "card-footer-item" %>
       </p>
-      <%= render 'calendar_mini', space: space, tenant: tenant, calendar: calendar,
+      <%= render 'calendar_mini', user: user, space: space, tenant: tenant, calendar: calendar,
                                   prev_month_path: tenant_spaces_path( tenant_id: tenant.id,
                                                                       date: calendar.prev_month_string),
                                   next_month_path: tenant_spaces_path( tenant_id: tenant.id,
