add users setup - basics

--- a/app/assets/stylesheets/calendar.scss
+++ b/app/assets/stylesheets/calendar.scss
@@ -14,6 +14,10 @@
 // light grey (disabled): #eaeaea or #e0e0e0
 // almost black: #1c1c1c, or #121212
 
+// .calendar-title {
+//   color: #2a42a4;
+// }
+
 .calendar .calendar-nav {
   -webkit-align-items: center;
   align-items: center;
