--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,5 +1,6 @@
 <footer class="footer is-light">
   <div class="container">
-    Copyright © 2020 CalendarCommons. All rights reserved.
+    <p>Copyright © 2020 CalendarCommons. All rights reserved.</p>
+    <a href="#">Terms and Conditions</a>
   </div>
 </footer>
