--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -15,25 +15,45 @@
 
   <div id="navbarBasicExample" class="navbar-menu">
     <div class="navbar-start">
-      <a class="navbar-item">
-        Home
-      </a>
+      <% if current_user %>
+        <%= link_to "#{current_user.tenant.tenant_name}", tenant_path(current_user.tenant), class: 'navbar-item' %>
+      <% end %>
 
-      <a class="navbar-item">
-        Documentation
-      </a>
+      <% if current_user && current_user.user_role == "manager" %>
+        <div class="navbar-item has-dropdown is-hoverable">
+          <a class="navbar-link">
+            Manage
+          </a>
+
+          <div class="navbar-dropdown">
+            <a class="navbar-item">
+              Tenant
+            </a>
+            <a class="navbar-item">
+              Spaces
+            </a>
+            <a class="navbar-item">
+              Categories
+            </a>
+            <a class="navbar-item">
+              Time Slots
+            </a>
+            <hr class="navbar-divider">
+            <a class="navbar-item">
+              User Roles
+            </a>
+          </div>
+        </div>
+      <% end %>
 
       <div class="navbar-item has-dropdown is-hoverable">
         <a class="navbar-link">
-          More
+          Other
         </a>
 
         <div class="navbar-dropdown">
           <a class="navbar-item">
             About
-          </a>
-          <a class="navbar-item">
-            Jobs
           </a>
           <a class="navbar-item">
             Contact
@@ -44,14 +64,15 @@
           </a>
         </div>
       </div>
+
     </div>
 
     <div class="navbar-end">
       <div class="navbar-item">
         <div class="buttons">
         <% if user_signed_in? %>
-          <%= link_to "#{current_user.email} profile", edit_user_registration_path, class: 'button is-primary' %>
-          <%= link_to "Logout", destroy_user_session_path, method: :delete, class: 'button is-light'  %>
+          <%= link_to "#{current_user.email}", edit_user_registration_path, class: 'button is-primary' %>
+          <%= link_to "Logout", destroy_user_session_path, method: :delete, class: 'button is-light' %>
         <% else %>
           <%= link_to "Sign up", new_user_registration_path, :class => 'button is-primary'  %>
           <%= link_to "Login", new_user_session_path, class: 'button is-light'  %>
